--- a/carne/style.css
+++ b/carne/style.css
@@ -143,14 +143,13 @@ body {
         display: none;
     }
 
-
-
 /*Nastavení border boxů a pozicování pro tablet*/
 
 @media (min-width: 480px) {
-.kontejner    {   
-    padding: 1.25rem;
-}    
+.kontejner    
+    {   
+        padding: 1.25rem;
+    }    
 
 .jidlo_1
     {   
@@ -166,11 +165,11 @@ body {
     }
 
 .recepty
-{  
-    display: flex;
-    flex-wrap: wrap;
-    min-height: 150px;
-}
+    {    
+        display: flex;
+        flex-wrap: wrap;
+        min-height: 150px;
+    }   
 
 .maly_recept_2
     {   
@@ -184,22 +183,20 @@ body {
 
 .maly_recept_4
     {   
-
         flex-basis: 50%;
     }
 
 .maly_recept_5
     {   
         flex-basis: 50%;
-
     }
-
 }
 
 
 /*Nastavení border boxů a pozicování pro PC*/
 @media (min-width: 860px) {
-.kontejner    {   
+.kontejner    
+    {   
         padding: 1.25rem;
         display: flex;
     }
@@ -207,23 +204,18 @@ body {
 .jidlo_1
     {   
         font-size: 3rem;
-
-
     }    
 .jidlo
     {   
         font-size: 1.75rem;
-
     }
 .hlavni_recept
     {   
         min-height: 400px;
     }
-
 .recepty
 {  
     min-height: 200px;
-
 }
 
 .maly_recept_2
@@ -238,7 +230,6 @@ body {
 
 .maly_recept_4
     {   
-
         flex-basis: 50%;
     }
 
